--- a/ProyectoDWS/src/main/resources/templates/subjects.html
+++ b/ProyectoDWS/src/main/resources/templates/subjects.html
@@ -10,7 +10,7 @@
     </section>
 
     <section id="cards">
-        <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div id="subjects-list" class="row row-cols-1 row-cols-md-3 g-4">
             <th:block th:each="subject : ${subjects}">
                 <div class="col">
                     <div class="card h-100">
@@ -34,14 +34,14 @@
     <div class="d-flex justify-content-center align-items-center my-4">
         <nav aria-label="Page navigation">
             <ul class="pagination">
-                <li class="page-item" th:if="${currentPage > 0}">
-                    <button class="page-link" id="prev-page">Anterior</button>
+                <li id="prev-page" class="page-item disabled">
+                    <button class="page-link">Anterior</button>
                 </li>
                 <li class="page-item disabled">
-                    <span class="page-link">Página <span id="currentPage" th:text="${currentPage + 1}">1</span> de <span id="totalPages" th:text="${totalPages}">1</span></span>
+                    <span class="page-link">Página <span id="currentPage">1</span> de <span id="totalPages">1</span></span>
                 </li>
-                <li class="page-item" th:if="${currentPage < totalPages - 1}">
-                    <button class="page-link" id="next-page">Siguiente</button>
+                <li id="next-page" class="page-item">
+                    <button class="page-link">Siguiente</button>
                 </li>
             </ul>
         </nav>
