--- a/ProyectoDWS/src/main/resources/templates/courses.html
+++ b/ProyectoDWS/src/main/resources/templates/courses.html
@@ -30,7 +30,7 @@
           <img class="card-img-top" th:src="@{/course/{id}/image(id=${course.id})}" th:alt="${course.title}" alt="Course Image">
           <div class="card-body">
             <h5 class="card-title">
-              <a th:href="@{/course/{id}(id=${course.id})}" th:text="${course.title}" class="text-decoration-none">TÃ­tulo del curso</a>
+              <a th:href="@{/course/{id}(id=${course.id})}" th:text="${course.title}" class="text-decoration-none">Título del curso</a>
             </h5>
             <p class="card-text"><strong>Asignaturas:</strong></p>
             <ul class="list-group list-group-flush">
