--- a/ProyectoDWS/src/main/resources/templates/courses/show_course.html
+++ b/ProyectoDWS/src/main/resources/templates/courses/show_course.html
@@ -24,6 +24,11 @@
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </div>
+                <div class="mt-3">
+                    <a th:href="${course.video}" download class="btn btn-primary">
+                        <i class="bi bi-download"></i> Descargar video
+                    </a>
+                </div>
             </div>
 
             <!-- Action buttons -->
