requestBody en vez de params, y arreglar que el token no se vea en comments

--- a/ProyectoDWS/src/main/resources/templates/courses/deleted_course.html
+++ b/ProyectoDWS/src/main/resources/templates/courses/deleted_course.html
@@ -8,8 +8,8 @@
         <div class="col-md-6">
             <div class="card shadow">
                 <div class="card-body text-center">
-                    <p class="mb-4">Course has been deleted.</p>
-                    <a href="/" class="btn btn-secondary">Back</a>
+                    <p class="mb-4">El curso ha sido eliminado.</p>
+                    <a href="/" class="btn btn-secondary">Volver</a>
                 </div>
             </div>
         </div>
